--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ Tahapan untuk mengaktifkan DNSSEC pada CloudFlare yang saya lakukan adalah
               <br>
               <i class="fa fa-paint-brush" aria-hidden="true"> <a href="#"> Hugo Theme </i></a>
             <br>
-          <i class="fa fa-user" aria-hidden="true"> <a href="https://kodebaper.com/"> About </i></a>
+          <i class="fa fa-user" aria-hidden="true"> <a href="about.html"> About </i></a>
         <br>
       <i class="fa fa-phone" aria-hidden="true"> <a href="#"> Contact </i></a> 
         <br>
