--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ Hi, selamat datang di kodebaper, blog pribadi saya yang membahas seputar pembela
 
 
 
-<meta itemprop="wordCount" content="602">
+<meta itemprop="wordCount" content="598">
 
 
 
@@ -85,14 +85,13 @@ Hi, selamat datang di kodebaper, blog pribadi saya yang membahas seputar pembela
 
 
 <section>
-  <p><!-- The scrollable area -->
+  <!-- The scrollable area -->
+
 <div class="container">
  <div class="jumbotron jumbotron-fluid" >
-  <center></p>
-
-<p><img src="/images/titlebarfinisi.png" alt="Image" height="250" width="250"></p>
-
-<p><br>
+  <center>    
+   <img src="/images/titlebarfinisi.png" alt="Image" height="250" width="250">       
+<br>
 <!-- Content di dalam jumbotron -->
    <center>
     <a class="github" href="https://github.com/kodebaper"> <i class="fa fa-github fa-2x"></i></a>
@@ -104,11 +103,11 @@ Hi, selamat datang di kodebaper, blog pribadi saya yang membahas seputar pembela
     <a class="facebook" href="https://facebook.com/maz.zempong"> <i class="fa fa-facebook fa-2x"></i></a>
    </center>
 </br>
-</div></p>
-
+</div>
 <p align="justify"><font size="6" color="#008B8B"><b> Tentang Kodebaper: Belajar Pemrograman dan Ngobrol seputar IT</b></font></p>
 <p align="justify"> Hi, selamat datang di kodebaper, blog pribadi saya yang membahas seputar pembelajaran mengenai teknologi. Sebenarnya halaman ini bagi saya tidak terlalu penting untuk dibuat, akan tetapi dimana blog pada umumnya yang selalu menyertakan "About Page" yang selalu wajib ada maka saya pun membuatnya. Setidaknya yang sempat membaca mungkin ingin sekedar tau siapa di balik layar dari blog Kodebaper ini.</p>
 
+<!-- batas table -->
 <div id="section1" class="container-fluid">
 <div class="container">
   <h2><font size="6" color="#008B8B">Dibalik Kodebaper</h2></font>
@@ -117,22 +116,19 @@ Hi, selamat datang di kodebaper, blog pribadi saya yang membahas seputar pembela
       <tr>
         <th>Nama</th>
         <th>Email</th>
-        <th>Blog</th>
-        <th>Nickname</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>Dimas Setiyadi</td>
         <td>dimassetiyadi0@gmail.com</td>
-        <td>https://kodebaper.com/</td>
-        <td>"mazzempong"</td>
       </tr>
     </tbody>
   </table>
 </div>
 </p>
 </div>
+<!-- batas table -->
 <div id="section2" class="container-fluid">
   <h1><font size="6" color="#008B8B"> #The Beginning ~ CMS </h1></font>
   <p align="justify">Tulisan-tulisan saya di blog bermula dari platform blog menggunakan CMS, saya sendiri dari dulu sangat prefer pada salah satu CMS yaitu joomla. Sering sewa hosting dan domain dari sejak duduk di bangku SMK dan aktif ngeblog, walaupun pada waktu itu selalu gonta-ganti blog dan banyak membahas topik yang gado-gado karena tidak terlalu serius untuk fokus membangun blog dimana pada akhirnya semua tulisan-tulisan pun hilang entah kemana. Sejak awal tahun 2020 saya memutuskan untuk fokus menulis hanya di satu blog dan mem-posting tulisan-tulisan saya di blog ini. Alasan dari semua ini karena kebetulan saya juga saat ini duduk di bangku perkuliahan dan menjadi mahasiswa dengan jurusan Teknik Komputer, oleh sebab itu bagi saya menulis di blog sangatlah penting karena bisa menjadi wadah dokumentasi saya setelah melakukan banyak hal yg telah saya pelajari khususnya di bidang ilmu IT.</p>
@@ -140,7 +136,6 @@ Hi, selamat datang di kodebaper, blog pribadi saya yang membahas seputar pembela
 <div id="section3" class="container-fluid">
   <h1><font size="6" color="#008B8B"> #Saya jatuh cinta dengan ~ Hugo </h1></font>
   <p align="justify">Dari beberapa pengalaman saya ngeblog menggunakan CMS saya akhirnya menemukan cara yang tidak biasa dalam hal bloging, yaitu nge-blog menggunakan Static Site Generator dari Hugo. Hal yang tidak saya duga dari sekedar nge-blog menggunakan Hugo akhirnya saya dapatkan dengan semakin sering saya mengulik lebih dalam teknologi yang ada pada Hugo.
-
   <p><br>
   Entah mengapa saya jadi menyukai Programming, karena nge-blog menggunakan Hugo lebih banyak berhadapan dengan aplikasi text editor dan terminal akhirnya jiwa keinginan menjadi seorang programmer pun tumbuh <i>"engga tau juga mau jadi programmer apa"</i>, selebihnya saya juga banyak berurusan di sisi BackEnd dengan GitHub Page dan Cloudflare <i>"saya sih anggepnya gitu"</i> . Semangat belajar Programming saya pun jadi tinggi dan mulai fokus saat ini mendalami <i>static site Hugo </i>dan mulai mengambil kursus pemrograman mobile Android menggunkana Bahasa Pemrograman <u>Kotlin.</u>
   </br>  
@@ -149,20 +144,16 @@ Hi, selamat datang di kodebaper, blog pribadi saya yang membahas seputar pembela
 <div id="section4" class="container-fluid">
   <h1><font size="6" color="#008B8B"> #Kenapa membuat Blog ini? </h1></font>
   <p align="justify">Alasan utama membangun blog ini hanya sebagai catatan pribadi tentang apa saja yang sudah saya pelajari dan saya praktekan, selebihnya saya menaruh harapan besar dimana tulisan saya ini akan bermanfaat untuk orang lain yang saat ini sedang menikmati proses belajar mengenai ilmu di bidang IT. Melalui blog ini saya juga ingin membagikan pengalaman dan ilmu saya <i>"walaupun ilmu dan pengalaman juga engga banyak".</i>
-
   <p><br>
   Topik yang akan sering saya bahas pada blog ini tidak akan jauh-jauh dari seputar <i>Hugo, Devops, Programming</i> dan selebihnya obrolan-obrolan pribadi saya mengenai IT.
 </p>
 </i>
 </div>
-
 <div id="section5" class="container-fluid">
   <h1><font size="6" color="#008B8B"> #Saya ngapain? ~ Sekarang! </h1></font>
   <p align="justify"> Saat ini saya bekerja di salah satu bagian divisi yang mengurus IT dari sebuah instansi Pemerintahan. Saya seorang pecinta Open Source dan pengguna Linux sejak tahun 2010.
-
   <p><br>
   Saya menyukai teknologi khususnya Open Source, menyukai kontribusi dengan teknologi yang di bangun menggunakan sistem Open Source, Linux Server Enthusiast, seneng baca buku dan nulis apapun di blog, suka bikin setup ruang kerja, suka kopi setangah pahit.
-
   <p><br>
   Saat ini saya pengguna setia Linux Debian dan MacOS, dan aktif melakukan eksperimen dengan server Linux serta mencari receh di internet.</p>
 </div>
