--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -3,11 +3,11 @@
   
 <meta itemprop="name" content="Roadmap">
 <meta itemprop="description" content="Kodebaper Roadmap  Jelajahi Kodebaper dengan Roadmap untuk lebih mudah
-         Tutorial Devops Tutorial Hugo Linux Enthusiast      Tutorial Pemrograman Secangkir Kopi      Lebih Dekat ? Yuk, sapa saya disini   Baca Ebook |  My Slide |  Hugo Theme |  About |  Contact |  FaQ    ">
+         Devops Tutorial Hugo Tutorial Linux Tutorial        Pemrograman  Secangkir Kopi       Lebih Dekat ? Yuk, sapa saya disini   Baca Ebook |  My Slide |  Hugo Theme |  About |  Contact |  FaQ    ">
 
 
 
-<meta itemprop="wordCount" content="40">
+<meta itemprop="wordCount" content="39">
 
 
 
@@ -16,7 +16,7 @@
   
   <meta property="og:title" content="Roadmap" />
 <meta property="og:description" content="Kodebaper Roadmap  Jelajahi Kodebaper dengan Roadmap untuk lebih mudah
-         Tutorial Devops Tutorial Hugo Linux Enthusiast      Tutorial Pemrograman Secangkir Kopi      Lebih Dekat ? Yuk, sapa saya disini   Baca Ebook |  My Slide |  Hugo Theme |  About |  Contact |  FaQ    " />
+         Devops Tutorial Hugo Tutorial Linux Tutorial        Pemrograman  Secangkir Kopi       Lebih Dekat ? Yuk, sapa saya disini   Baca Ebook |  My Slide |  Hugo Theme |  About |  Contact |  FaQ    " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://kodebaper.com/roadmap/" />
 
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Roadmap"/>
 <meta name="twitter:description" content="Kodebaper Roadmap  Jelajahi Kodebaper dengan Roadmap untuk lebih mudah
-         Tutorial Devops Tutorial Hugo Linux Enthusiast      Tutorial Pemrograman Secangkir Kopi      Lebih Dekat ? Yuk, sapa saya disini   Baca Ebook |  My Slide |  Hugo Theme |  About |  Contact |  FaQ    "/>
+         Devops Tutorial Hugo Tutorial Linux Tutorial        Pemrograman  Secangkir Kopi       Lebih Dekat ? Yuk, sapa saya disini   Baca Ebook |  My Slide |  Hugo Theme |  About |  Contact |  FaQ    "/>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
@@ -102,21 +102,22 @@ Navigasi
 <table class="table">
 <thead>
     <tr>
-      <th><img src="/images/devops.png" alt="Card image cap" style="height: 80px; widht: 80px;"></th>
-      <th><img src="/images/hugomenu.svg" alt="Card image cap" style="height: 100px; widht: 100px;"></th>
-      <th><img src="/images/linux.png" alt="Card image cap" style="height: 110px; widht: 110px;"></th>
+      <th><img src="/images/devop.svg" alt="Card image cap" style="height: 110px; widht: 110px;"></th>
+      <th><img src="/images/ssg.svg" alt="Card image cap" style="height: 100px; widht: 100px;"></th>
+      <th><img src="/images/linux.svg" alt="Card image cap" style="height: 110px; widht: 110px;"></th>
     </tr>
     <tr>
-     <td><a href="https://kodebaper.com/categories/devops/" button type="button" class="btn btn-info">Tutorial Devops</button></td>
-     <td><a href="https://kodebaper.com/categories/hugo/" button type="button" class="btn btn-info">Tutorial Hugo</button></td>
-     <td><a href="https://kodebaper.com/categories/linux-enthusiast/" button type="button" class="btn btn-info">Linux Enthusiast</button></td>
+     <td><a href="https://kodebaper.com/categories/devops/" button type="button" class="btn btn-outline-dark"> Devops Tutorial</button></td>
+     <td><a href="https://kodebaper.com/categories/hugo/" button type="button" class="btn btn-outline-dark"> Hugo Tutorial</button></td>
+     <td><a href="https://kodebaper.com/categories/linux-enthusiast/" button type="button" class="btn btn-outline-dark"> Linux Tutorial </button>
+      </td>
     </tr>
     <tr>
-     <th><img src="/images/dojo1.png" alt="Card image cap" style="height: 110px; widht: 100px;"></th>
-     <th><img src="/images/cof.png" alt="Card image cap" style="height: 110px; widht: 110px;"></th>
+     <th><img src="/images/programming.svg" alt="Card image cap" style="height: 110px; widht: 100px;"></th>
+     <th><img src="/images/secangkir.svg" alt="Card image cap" style="height: 110px; widht: 110px;"></th>
     <tr>
-     <td><a href="https://kodebaper.com/categories/pemrograman/" button type="button" class="btn btn-info"> Tutorial Pemrograman</button></td>
-     <td><a href="https://kodebaper.com/categories/secangkir-kopi/" button type="button" class="btn btn-info">Secangkir Kopi</button></td>
+     <td><a href="https://kodebaper.com/categories/pemrograman/" button type="button" class="btn btn-outline-dark"> Pemrograman </button></td>
+     <td><a href="https://kodebaper.com/categories/secangkir-kopi/" button type="button" class="btn btn-outline-dark">Secangkir Kopi </button></td>
     </tr>
 </thead>
 </tbody>
@@ -136,6 +137,7 @@ Navigasi
       </p>   
   </div>      
  </div>
+ 
 
 </section>
 
