--- a/about/index.html
+++ b/about/index.html
@@ -34,10 +34,13 @@ Hi, selamat datang di kodebaper, blog pribadi saya yang membahas seputar pembela
   <meta property="og:title" content="Tentang Kodebaper" />
   
   <meta property="og:type" content="article" />
-  <meta property="article:published_time" content="0001-01-01"> 
+  <meta property="og:type" content="website" />
+  
   <meta property="og:url" content="https://kodebaper.com/about/" />
   <meta property="og:site_name" content="Kodebaper: Belajar Pemrograman dan Ngobrol Seputar IT" />
-   <meta property="og:image" content="https://kodebaper.com/images/thumbnail.png">  
+  
+  <meta property="og:tags" content="Page(/about.md)" />
+   
   
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   
@@ -45,6 +48,8 @@ Hi, selamat datang di kodebaper, blog pribadi saya yang membahas seputar pembela
   
 <script src="https://use.fontawesome.com/c9c23ec5dc.js"></script> 
 </head>
+
+
 
 
 <header class="header-area">
@@ -199,17 +204,4 @@ Navigasi
   hljs.initHighlightingOnLoad();
 </script>
 
-
-
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-178855929-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() {
-    dataLayer.push(arguments);
-  }
-  gtag("js", new Date());
-  gtag("config", "UA-178855929-1");
-</script>
- 
 
