--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -2,8 +2,7 @@
   <meta charset="UTF-8" />
   
 <meta itemprop="name" content="Roadmap">
-<meta itemprop="description" content="Kodebaper Roadmap  Jelajahi Kodebaper dengan Roadmap untuk lebih mudah
-         Devops Tutorial Hugo Tutorial Linux Tutorial        Pemrograman  Secangkir Kopi       Lebih Dekat ? Yuk, sapa saya disini   Baca Ebook |  My Slide |  Hugo Theme |  About |  Contact |  FaQ    ">
+<meta itemprop="description" content=" Jelajahi Kodebaper | mari belajar dan diskusi seputar teknologi           Devops Tutorial Hugo Tutorial Linux Tutorial        Pemrograman  Secangkir Kopi       Lebih Dekat ? Yuk, kenali Kodebaper disini   Baca Ebook |  My Slide |  Hugo Theme |  About |  Contact |  FaQ    ">
 
 
 
@@ -15,16 +14,14 @@
 
   
   <meta property="og:title" content="Roadmap" />
-<meta property="og:description" content="Kodebaper Roadmap  Jelajahi Kodebaper dengan Roadmap untuk lebih mudah
-         Devops Tutorial Hugo Tutorial Linux Tutorial        Pemrograman  Secangkir Kopi       Lebih Dekat ? Yuk, sapa saya disini   Baca Ebook |  My Slide |  Hugo Theme |  About |  Contact |  FaQ    " />
+<meta property="og:description" content=" Jelajahi Kodebaper | mari belajar dan diskusi seputar teknologi           Devops Tutorial Hugo Tutorial Linux Tutorial        Pemrograman  Secangkir Kopi       Lebih Dekat ? Yuk, kenali Kodebaper disini   Baca Ebook |  My Slide |  Hugo Theme |  About |  Contact |  FaQ    " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://kodebaper.com/roadmap/" />
 
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Roadmap"/>
-<meta name="twitter:description" content="Kodebaper Roadmap  Jelajahi Kodebaper dengan Roadmap untuk lebih mudah
-         Devops Tutorial Hugo Tutorial Linux Tutorial        Pemrograman  Secangkir Kopi       Lebih Dekat ? Yuk, sapa saya disini   Baca Ebook |  My Slide |  Hugo Theme |  About |  Contact |  FaQ    "/>
+<meta name="twitter:description" content=" Jelajahi Kodebaper | mari belajar dan diskusi seputar teknologi           Devops Tutorial Hugo Tutorial Linux Tutorial        Pemrograman  Secangkir Kopi       Lebih Dekat ? Yuk, kenali Kodebaper disini   Baca Ebook |  My Slide |  Hugo Theme |  About |  Contact |  FaQ    "/>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
@@ -34,10 +31,13 @@
   <meta property="og:title" content="Roadmap" />
   
   <meta property="og:type" content="article" />
-  <meta property="article:published_time" content="0001-01-01"> 
+  <meta property="og:type" content="website" />
+  
   <meta property="og:url" content="https://kodebaper.com/roadmap/" />
   <meta property="og:site_name" content="Kodebaper: Belajar Pemrograman dan Ngobrol Seputar IT" />
-   <meta property="og:image" content="https://kodebaper.com/images/thumbnail.png">  
+  
+  <meta property="og:tags" content="Page(/roadmap.md)" />
+   
   
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   
@@ -45,6 +45,8 @@
   
 <script src="https://use.fontawesome.com/c9c23ec5dc.js"></script> 
 </head>
+
+
 
 
 <header class="header-area">
@@ -93,8 +95,8 @@ Navigasi
 <section>
   <div style="background:transparent !important " class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4"> Kodebaper Roadmap </h1>
-    <p class="lead" font>Jelajahi Kodebaper dengan Roadmap untuk lebih mudah</p>
+    <h1 class="display-4"> </h1>
+    <h1>Jelajahi Kodebaper | <small>mari belajar dan diskusi seputar teknologi </small></h1>
   </div>
  <p>
 <!-- Roadmap Menu -->
@@ -126,18 +128,17 @@ Navigasi
 </div>
 <!-- Roadmap Menu -->
  <div class="container">
-  <h1>Lebih Dekat ? <small>Yuk, sapa saya disini </small></h1>
+  <h1>Lebih Dekat ? <small>Yuk, kenali Kodebaper disini </small></h1>
       <p>
-        <i class="fa fa-book" aria-hidden="true" > <a href="#"> Baca Ebook | </i></a>
-        <i class="fa fa-slideshare" aria-hidden="true" > <a href="#"> My Slide | </i></a>
-        <i class="fa fa-paint-brush" aria-hidden="true"> <a href="#" >Hugo Theme | </i></a>
-        <i class="fa fa-user" aria-hidden="true"> <a href="https://kodebaper.com/about/" >About | </a></i>
-        <i class="fa fa-phone" aria-hidden="true"> <a href="#"> Contact | </i></a> 
-        <i class="fa fa-comments" aria-hidden="true"> <a href="#"> FaQ </i></a>
+        <img src="/images/bootstrapicons/booksss.svg" alt="" width="16" height="16"> <a href="#"> Baca Ebook | </i></a>
+        <img src="/images/bootstrapicons/slide.svg" alt="" width="16" height="16"> <a href="#"> My Slide | </i></a>
+        <img src="/images/bootstrapicons/theme.svg" alt="" width="16" height="16"> <a href="#" >Hugo Theme | </i></a>
+        <img src="/images/bootstrapicons/aboutme.svg" alt="" width="16" height="16"> <a href="https://kodebaper.com/about/" >About | </a></i>
+        <img src="/images/bootstrapicons/telephone-plus.svg" alt="" width="16" height="16"> <a href="#"> Contact | </i></a> 
+        <img src="/images/bootstrapicons/faq.svg" alt="" width="16" height="16"> <a href="#"> FaQ </i></a>
       </p>   
   </div>      
  </div>
- 
 
 </section>
 
@@ -168,17 +169,3 @@ Navigasi
 <script>
   hljs.initHighlightingOnLoad();
 </script>
-
-
-
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-178855929-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() {
-    dataLayer.push(arguments);
-  }
-  gtag("js", new Date());
-  gtag("config", "UA-178855929-1");
-</script>
- 
