--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Kodebaper: Tempat Belajar dan Ngbrol  IT" />
 <meta name="twitter:description"
-  content="IT Enthusiast dan Belajar Hugo Static" />
+  content="Tempat Belajar dan Ngobrol IT" />
 <meta name="twitter:site" content="https://kodebaper.com/" />
 <meta name="twitter:creator" content="" />
 <meta name="twitter:image"
@@ -51,7 +51,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Kodebaper: Tempat Belajar dan Ngbrol  IT">
 <meta property="og:description"
-  content="IT Enthusiast dan Belajar Hugo Static" />
+  content="Tempat Belajar dan Ngobrol IT" />
 <meta property="og:url" content="https://kodebaper.com/" />
 <meta property="og:site_name" content="Kodebaper: Tempat Belajar dan Ngbrol  IT" />
 <meta property="og:image"
@@ -323,7 +323,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
 
         <div class="p-note user-profile-bio mb-3 js-user-profile-bio f4">
-          <div>IT Enthusiast dan Belajar Hugo Static</div>
+          <div>Tempat Belajar dan Ngobrol IT</div>
         </div>
 
         <div class="d-flex flex-column">
