--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             width="32" height="32"
             viewBox="0 0 439 439">
           <path id="Imported Path"
-            fill="none" stroke="black" stroke-width="8"
+            fill="none" stroke="#b6b6b6" stroke-width="18"
             d="M 105.75,343.54
            C 104.04,345.06 104.42,346.87 106.90,348.97
              109.18,351.25 111.09,351.54 112.61,349.82
@@ -490,7 +490,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             width="32" height="32"
             viewBox="0 0 439 439">
          <path id="Imported Path"
-               fill="none" stroke="black" stroke-width="11"
+               fill="none" stroke="#b6b6b6" stroke-width="18"
                d="M 414.85,24.15
                   C 398.75,8.05 379.36,0.00 356.69,0.00
                     356.69,0.00 82.32,0.00 82.32,0.00
@@ -544,7 +544,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
      width="32" height="32"
      viewBox="0 0 160 160">
   <path id="Imported Path"
-        fill="none" stroke="black" stroke-width="6"
+        fill="none" stroke="#b6b6b6" stroke-width="4"
         d="M 65.62,1.88
            C 24.25,9.38 -4.75,49.12 1.25,90.38
              6.50,126.75 33.25,153.50 69.62,158.75
@@ -591,7 +591,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
      width="32" height="32"
      viewBox="0 0 112 112">
   <path id="Imported Path"
-        fill="none" stroke="black" stroke-width="3"
+        fill="none" stroke="#b6b6b6" stroke-width="4"
         d="M 89.46,60.51
            C 89.46,60.51 89.46,83.59 89.46,83.59
              89.46,83.59 76.07,83.59 76.07,83.59
@@ -638,7 +638,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
      width="32" height="32"
      viewBox="0 0 512 512">
   <path id="Imported Path"
-        fill="none" stroke="black" stroke-width="9"
+        fill="none" stroke="#b6b6b6" stroke-width="9"
         d="M 399.34,66.29
            C 376.53,66.29 357.98,84.84 357.98,107.65
              357.98,130.46 376.53,149.02 399.34,149.02
